// mock_tests.dbml

// Table MockTests Thông tin kỳ thi (mock test)
Table MockTests {
  id uuid [primary key, default: `uuid_generate_v4()`]
  type varchar(10) [not null, note: "Enum: 'HSK', 'TOCFL', 'D4', 'HSKK'"]
  level varchar(10) [not null, note: "Ví dụ: HSK1–HSK6, HSK7-9, TOCFL A1–C2"]
  title varchar(100) [not null]
  total_time_limit int [not null, note: "Tổng thời gian làm bài (phút)"]
  total_max_score int [not null]
  instructions text
  is_active boolean [default: true]
  created_by uuid [note: "Người tạo (Admin)"]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  deleted_at timestamptz [note: "Soft delete (ẩn tạm thời)"]

  Note: '''
  - Bảng gốc quản lý đề thi thử.
  - Ví dụ: 'HSK3 - Đề số 1'.
  '''
  
  Indexes {
    (type, level) [type: btree]
    created_by [type: btree]
    is_active [type: btree]
  }
}

// Các phần trong đề (Listening, Reading, Writing...)
Table MockTestSections {
  id uuid [primary key, default: `uuid_generate_v4()`]
  test_id uuid [not null]
  name varchar(50) [not null, note: "Listening, Reading, Writing, Speaking..."]
  order_no int [not null, default: 1]
  time_limit int [note: "Giới hạn thời gian section (phút), NULL nếu không tách riêng"]
  max_score int [not null]
  total_questions int [not null]

  Note: '''
  - Mỗi đề thi có nhiều section.
  - order_no để sắp xếp (ví dụ Listening = 1, Reading = 2).
  '''
  
  Indexes {
    test_id [type: btree]
    order_no [type: btree]
  }
}

// Câu hỏi trong section
Table MockTestQuestions {
  id uuid [primary key, default: `uuid_generate_v4()`]
  section_id uuid [not null]
  order_no int [not null]
  type varchar(20) [not null, note: "Enum: 'mcq','fill','write','repeat','describe','answer'"]
  text text [note: "Nội dung câu hỏi"]
  options jsonb [note: "Array<string> cho MCQ, null nếu không có lựa chọn"]
  correct_answer text [note: "Chỉ số cho MCQ hoặc text cho dạng khác"]
  explanation text [note: "Giải thích đáp án (dùng khi review)"]
  media_id uuid [note: "Tham chiếu Media (audio/hình ảnh)"]
  start_time int [note: "Thời điểm bắt đầu (giây) trong file audio"]
  end_time int [note: "Thời điểm kết thúc (giây) trong file audio"]
  is_visual boolean [default: false, note: "true nếu là câu dựa trên hình ảnh"]

  Note: '''
  - Câu hỏi có thể đi kèm file nghe hoặc hình.
  - start_time/end_time dùng để phát lại 1 đoạn audio trong file nghe lớn.
  '''
  
  Indexes {
    section_id [type: btree]
    order_no [type: btree]
    type [type: btree]
    media_id [type: btree]
  }
}

// =======================
// BẢNG KẾT QUẢ NGƯỜI DÙNG
// =======================

// Tổng hợp điểm cao nhất của user cho 1 đề thi
Table UserTestScores {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  test_id uuid [not null]
  highest_total_score int [default: 0]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]

  Note: '''
  - Lưu điểm cao nhất của user cho từng đề.
  - Dùng để xếp hạng nhanh (leaderboard).
  - Chi tiết từng lần thi tách ra ở bảng UserTestAttempts.
  '''

  Indexes {
    (user_id, test_id) [unique]
    highest_total_score [type: btree]
    created_at [type: btree]
  }
}

// Lần làm bài cụ thể của user
Table UserTestAttempts {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  test_id uuid [not null]
  started_at timestamptz [default: `CURRENT_TIMESTAMP`]
  submitted_at timestamptz
  total_score int
  section_scores jsonb [note: "Ví dụ: [{section_id, score, completed_questions, total_questions}]"]

  Note: '''
  - Mỗi lần thi của user = 1 record.
  - section_scores lưu điểm chi tiết theo phần.
  '''

  Indexes {
    user_id [type: btree]
    test_id [type: btree]
    submitted_at [type: btree]
  }
}

// Câu trả lời chi tiết của user trong từng attempt
Table UserTestAnswers {
  id uuid [primary key, default: `uuid_generate_v4()`]
  attempt_id uuid [not null]
  question_id uuid [not null]
  selected_answer text
  is_correct boolean
  time_spent int [note: "Thời gian làm câu (giây)"]
  reviewed boolean [default: false, note: "Người dùng đã xem lại lời giải chưa"]

  Note: '''
  - Lưu chi tiết từng câu user đã làm.
  - Phục vụ tính năng review đáp án sau khi thi.
  - reviewed = true nếu user đã click xem giải thích.
  '''

  Indexes {
    attempt_id [type: btree]
    question_id [type: btree]
    is_correct [type: btree]
  }
}

// Relationships
Ref: MockTestSections.test_id > MockTests.id [delete: cascade]
Ref: MockTestQuestions.section_id > MockTestSections.id [delete: cascade]
Ref: MockTestQuestions.media_id > Media.id [delete: set null]
Ref: MockTests.created_by > Users.id [delete: set null]
Ref: UserTestScores.user_id > Users.id [delete: cascade]
Ref: UserTestScores.test_id > MockTests.id [delete: cascade]
Ref: UserTestAttempts.user_id > Users.id [delete: cascade]
Ref: UserTestAttempts.test_id > MockTests.id [delete: cascade]
Ref: UserTestAnswers.attempt_id > UserTestAttempts.id [delete: cascade]
Ref: UserTestAnswers.question_id > MockTestQuestions.id [delete: cascade]